Change family icon

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="item">
-          <i class="fas fa-briefcase fa-2x"></i>
+          <i class="fas fa-users fa-2x"></i>
           <div>
             <h3>
               Família
