Fixed "O que" to go to the next line

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <img src="/img/Logo.png" alt="Logo" class="logo"/>
       <ul>
         <li><a href="#showcase">Início</a></li>
-        <li><a href="#Oque">O que</a></li>
+        <li><a href="#Oque">O&nbspque</a></li>
         <li><a href="#Quem">Quem</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
