Updated as client request

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
               Trabalhista
             </h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-              voluptatibus!
+              Consultorias, propositura de ações e apresentação de defesas.
             </p>
           </div>
         </div>
@@ -74,11 +73,10 @@
           <i class="fas fa-book-reader fa-2x"></i>
           <div>
             <h3>
-              Cívil
+              Cível
             </h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-              voluptatibus!
+              Elaboração de peças processuais em ações de cobrança, reparação de danos e inventários
             </p>
           </div>
         </div>
@@ -89,8 +87,7 @@
               Família
             </h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-              voluptatibus!
+              Divórcios, dissolução de sociedade de fato e pensão alimentícia.
             </p>
           </div>
         </div>
@@ -99,15 +96,19 @@
 
     <!-- Quem Somos -->
     <section id="Quem">
-      <div class="img"></div>
+      <div class="img">
+        <div class="img-text">
+        <h1 class="py-1">Compromisso</h1>
+        <h1 class="py-1">Seriedade</h1>
+        <h1 class="py-1">Experiência</h1>
+        </div>
+      </div>
       <div class="Quem-texto bg-dark p-2">
         <h2 class="text-center m-heading ">
           <span class="text-primary">Quem </span>somos
         </h2>
         <p class="">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
-          aspernatur suscipit enim culpa dolores veniam doloribus itaque eum,
-          laborum officia.
+          Banca de advocacia com vasta experiência e que atua em diversos ramos do direito.
         </p>
         <h3 class="">Nosso Time</h3>
         <ul class="list ">
@@ -133,7 +134,8 @@
      </div>
      <div class="contato-item">
         <i class="fas fa-phone-alt fa-2x"></i>
-        <p>Telefone: (42) 3224-0614</p>
+        <p>Telefone: (42) 3224-0614 <br>
+        Whatsapp: (42) 99823-1011</p>
      </div>
      <div class="contato-item">
         <i class="fas fa-calendar-alt fa-2x"></i>
