--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           Mais de 20 anos de experiência
         </h1>
         <p class="lead">
-          Advocacia trabalhista, cívil e família.
+          Advocacia trabalhista, cível e família.
         </p>
         <a href="#Oque" class="btn">Saiba mais</a>
       </div>
