Changed names to h3

--- a/index.html
+++ b/index.html
@@ -104,17 +104,17 @@
         </div>
       </div>
       <div class="Quem-texto bg-dark p-2">
-        <h2 class="text-center m-heading ">
+        <h2 class="text-center m-heading py-1 ">
           <span class="text-primary">Quem </span>somos
         </h2>
         <p class="">
           Banca de advocacia com vasta experiência e que atua em diversos ramos do direito.
         </p>
-        <h3 class="">Nosso Time</h3>
+        <h2 class="">Nosso Time</h2>
         <ul class="list ">
-          <li>Paulo André Miara</li>
+          <li><h3>Paulo André Miara</h3></li>
           <li>OAB: 21542/PR</li>
-          <li>Miguel Overcenko</li>
+          <li><h3>Miguel Overcenko</h3></li>
           <li>OAB: 18124/PR</li>
         </ul>
       </div>
