--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="Quem-texto bg-dark p-2">
-        <h2 class="text-center m-heading py-1 ">
+        <h2 class="text-center m-heading">
           <span class="text-primary">Quem </span>somos
         </h2>
         <p class="">
