--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="Advocacia trabalhista, cível e família em Ponta Grossa - PR. Mais de 20 anos de experiência e banca de advocacia com vasta experiência e que atua em diversos ramos do direito."/>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
@@ -30,8 +31,8 @@
       <img src="/img/Logo.png" alt="Logo" class="logo"/>
       <ul>
         <li><a href="#showcase">Início</a></li>
-        <li><a href="#Oque">O&nbspque</a></li>
-        <li><a href="#Quem">Quem</a></li>
+        <li><a href="#Oque">Serviços</a></li>
+        <li><a href="#Quem">Quem&nbspsomos</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
@@ -54,7 +55,7 @@
     <section id="Oque">
       <div class="container">
         <h2 class="text-center m-heading py-2">
-          <span class="text-primary">O que </span>fazemos
+          <span class="text-primary">Serviços</span>
         </h2>
       </div>
       <div class="items">
@@ -111,7 +112,7 @@
           Banca de advocacia com vasta experiência e que atua em diversos ramos do direito.
         </p>
         <h2 class="">Nosso Time</h2>
-        <ul class="list ">
+        <ul class="list">
           <li><h3>Paulo André Miara</h3></li>
           <li>OAB: 21542/PR</li>
           <li><h3>Miguel Overcenko</h3></li>
