--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
         </div>
         <div class="item">
-          <i class="fas fa-users fa-2x"></i>
+          <i class="fas fa-user-friends fa-2x last-item"></i>
           <div>
             <h3>
               Família
